[project]
name = "spendwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.2",
    "python-jose[cryptography]==3.3.0",
    "sqlalchemy==2.0.23",
    "uvicorn==0.24.0",
]
